Created recipe folder and basic recipe page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Odin Project: Recipes</title>
+    <title>Lasagna</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <a href="./recipes/lasagna.html">World's Best Lasagna Recipe</a>
+    <h1>World's Best Lasagna by John Chandler</h1>
 </body>
 </html>
