--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Odin Project: Recipes</title>
-</head>
-<body>
-    <h1>Recipes</h1>
-    <a href="./recipes/lasagna.html">World's Best Lasagna Recipe</a>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The Odin Project: Recipes</title>
+    </head>
+
+    <body>
+        <h1>Recipes</h1>
+        <ul>
+            <li><a href="./recipes/lasagna.html">World's Best Lasagna Recipe</a></li>
+            <li><a href="./recipes/bakedBrie.html">Baked Brie Recipe</a></li>
+        </ul>
+    </body>
 </html>
