--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <body>
         <h1>Recipes</h1>
         <ul>
-            <li><a href="./recipes/lasagna.html">World's Best Lasagna Recipe</a></li>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
             <li><a href="./recipes/bakedBrie.html">Baked Brie Recipe</a></li>
+            <li><a href="./recipes/burger.html">Burger Recipe</a></li>
         </ul>
     </body>
 </html>
